# neurostore-python-sdk

./: .gitlab-ci.yml  .travis.yml  README.md  pyproject.toml  setup.py  tox.ini
.openapi-generator/: FILES
docs/: AbstractStudy.md  AbstractStudyList.md  AbstractStudyReturn.md  AbstractStudyVersions.md  AnalysesApi.md  Analysis.md  AnalysisBase.md  AnalysisCommon.md  AnalysisList.md  AnalysisRelationships.md  AnalysisRequest.md  AnalysisRequestRelationships.md  AnalysisRequestRelationshipsConditions.md  AnalysisRequestRelationshipsConditionsInner.md  AnalysisRequestRelationshipsImages.md  AnalysisRequestRelationshipsImagesInner.md  AnalysisRequestRelationshipsPoints.md  AnalysisRequestRelationshipsPointsInner.md  AnalysisReturn.md  AnalysisReturnAllOf.md  AnalysisReturnRelationships.md  AnalysisReturnRelationshipsConditions.md  AnalysisReturnRelationshipsConditionsInner.md  AnalysisReturnRelationshipsImages.md  AnalysisReturnRelationshipsImagesInner.md  AnalysisReturnRelationshipsPoints.md  AnalysisReturnRelationshipsPointsInner.md  Annotation.md  AnnotationBase.md  AnnotationCommon.md  AnnotationExport.md  AnnotationList.md  AnnotationPipelineExtension.md  AnnotationPipelineExtensionPipelinesInner.md  AnnotationRelationships.md  AnnotationRequest.md  AnnotationRequestOneOf.md  AnnotationRequestRelationships.md  AnnotationRequestRelationshipsNotes.md  AnnotationRequestRelationshipsNotesInner.md  (+134 more)
neurostore_sdk/: __init__.py  api_client.py  configuration.py  endpoint.py  exceptions.py  model_utils.py  rest.py  schemas.py
test/: test_abstract_study.py  (+166 more)
(+621 files in other folders)
